--- a/program.css
+++ b/program.css
@@ -6,12 +6,26 @@
 body, html {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #F0F8FF;
+}
+
+button {
+    height: 30px;
+    width: 40px;
+    margin: auto;
+    margin-top: 0.5em;
+    border-radius: 8px;
+    background-color: #3CB371;
+    border: 1px solid green;
+    color: white;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 #front{
     width: 1200px;
     height: 800px;
-    background-color: #F0F8FF;
     margin: 0.5em auto;
     padding: 0.5em;
 }
@@ -19,7 +33,7 @@ body, html {
 #canvasDisplay {
     width: 60%;
     height: 45%;
-    background-color: #F8F8FF;
+    background-color: #A9A9A9;
     border-radius: 0.5em;
     margin: auto;
     padding: 0.5em;
@@ -42,27 +56,26 @@ body, html {
 #formDisplay {
     height: 50%;
     width: 70%;
-    background-color: #DCDCDC;
+    background-color :#A9A9A9;
     border-radius: 1em;
     margin: auto;
     margin-top: 1em;
     padding: 0.5em;
 }
 
-#tiempoRever {
-    height: 5%;
+#tiempoRever, #dimRecinto, #dimFuente, #dimMicro{
     width: 90%;
     margin: auto;
     margin-top: 0.5em;
     padding: 0.5em;
-    background-color: blue;
+    background-color: #DCDCDC;
+    border-radius: 0.5em;
+}
+
+#tiempoRever {
+    height: 5%;;
 }
 
 #dimRecinto, #dimFuente, #dimMicro{
     height: 20%;
-    width: 90%;
-    margin: auto;
-    margin-top: 0.5em;
-    padding: 0.5em;
-    background-color: red;
 }
