Añadimos distancia minima.

--- a/program.css
+++ b/program.css
@@ -23,6 +23,14 @@ button {
     cursor: pointer;
 }
 
+#title {
+    width: 60%;
+    margin: auto;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    text-align: center;
+}
+
 #front{
     width: 1200px;
     height: 800px;
