--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -35,47 +35,45 @@ button {
 
 #front{
     width: 1200px;
-    height: 900px;
+    height: 800px;
     margin: 0.5em auto;
     padding: 0.5em;
 }
 
 #canvasDisplay {
-    width: 35%;
-    height: 80%;
+    width: 60%;
+    height: 45%;
     background-color: #A9A9A9;
     border-radius: 0.5em;
-    float: right;
     margin: auto;
     padding: 0.5em;
 }
 
 #dispOne {
     width:310px;
-/*    float: left;*/
+    float: left;
     margin: auto;
     padding: 0.5em;
 }
 
 #dispTwo {
     width:310px;
-/*    float: right;*/
+    float: right;
     margin: auto;
     padding: 0.5em;
 }
 
 #formDisplay {
-    width: 50%;
     height: 50%;
+    width: 70%;
     background-color :#A9A9A9;
     border-radius: 1em;
-    float: left;
     margin: auto;
     margin-top: 1em;
     padding: 0.5em;
 }
 
-#tiempoRever, #dimRecinto, #dimFuente, #dimMicro{
+#tiempoRever, #dimRecinto, #dimFuente, #dimMicro {
     width: 90%;
     margin: auto;
     margin-top: 0.5em;
@@ -88,6 +86,28 @@ button {
     height: 5%;;
 }
 
-#dimRecinto, #dimFuente, #dimMicro{
+#dimRecinto, #dimFuente, #dimMicro {
     height: 20%;
+}
+
+.distanceMsg {
+  width: 60%;
+  height: 7%;
+  border-radius: 0.5em;
+  margin: auto;
+  margin-top: 0.5em;
+  padding: 0.5em;
+  text-align: center;
+  font-size: 16px;
+  border: 2px solid;
+}
+
+.good {
+  background-color: limegreen;
+  border: darkgreen;
+}
+
+.error {
+  background-color: red;
+  border: darkred;
 }
