--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -9,6 +9,7 @@ body, html {
     background-color: #F0F8FF;
 }
 
+/*
 button {
     width: 150px;
     height: 25px;
@@ -24,48 +25,90 @@ button {
     font-size: 16px;
     cursor: pointer;
 }
+*/
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 2px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+}
 
 #title {
-    width: 60%;
+    width: 50%;
     margin: auto;
     margin-top: 1em;
     margin-bottom: 1em;
     text-align: center;
 }
 
-#front{
-    width: 1200px;
-    height: 800px;
-    margin: 0.5em auto;
+.contenedorPrincipal {
+    width:100%;
+    height:auto;
+    background-color: #ddd;
+    position:relative;
+    margin:auto;
     padding: 0.5em;
-}
-
-#canvasDisplay {
-    width: 60%;
-    height: 45%;
-    background-color: #A9A9A9;
     border-radius: 0.5em;
-    margin: auto;
-    padding: 0.5em;
 }
 
-#dispOne {
-    width:310px;
-    float: left;
-    margin: auto;
-    padding: 0.5em;
+.canvasDisplay {
+  width: 60%;
+  height: 45%;
+  background-color: #A9A9A9;
+  text-align: center;
+  border-radius: 0.5em;
+  margin: auto;
+  padding: 0.5em;
 }
 
-#dispTwo {
-    width:310px;
-    float: right;
-    margin: auto;
-    padding: 0.5em;
+.displayOne {
+  position: relative;
+  float: left;
+  margin: auto;
+  padding: 1em;
+  text-align: center;
 }
 
-#formDisplay {
+.displayTwo {
+  margin: auto;
+  padding: 1em;
+  text-align: center;
+}
+
+.formDisplay {
     height: 50%;
-    width: 70%;
+    width: 50%;
     background-color :#A9A9A9;
     border-radius: 1em;
     margin: auto;
@@ -110,4 +153,20 @@ button {
 .error {
   background-color: red;
   border: darkred;
+}
+
+.calcButton {
+  width: 150px;
+  height: 25px;
+  margin: auto;
+  margin-top: 0.5em;
+  margin-left: 40%;
+  border-radius: 8px;
+  background-color: #3CB371;
+  border: 1px solid green;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
 }
