--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -1,12 +1,31 @@
 * {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 body, html {
-    height: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #F0F8FF;
+  height: 100%;
+  font-family: Avenir;
+  background-color: #F0F8FF;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+}
+
+h4, p{
+  padding: 6px;
+  margin: auto;
+  text-align: center;
+}
+
+h4 {
+  text-align: center;
+}
+
+input {
+  width: auto;
+  height: 25px;
+  border-radius: 0.5em;
+  margin-left: 33%;
 }
 
 /*
@@ -29,9 +48,9 @@ button {
 
 /* Style the tab */
 .tab {
-    overflow: hidden;
-    border: 2px solid #ccc;
-    background-color: #f1f1f1;
+  overflow: hidden;
+  border: 2px solid #ccc;
+  background-color: #f1f1f1;
 }
 
 /* Style the buttons inside the tab */
@@ -101,36 +120,37 @@ button {
 }
 
 .displayTwo {
+  position: relative;
   margin: auto;
   padding: 1em;
   text-align: center;
 }
 
 .formDisplay {
-    height: 50%;
-    width: 50%;
-    background-color :#A9A9A9;
-    border-radius: 1em;
-    margin: auto;
-    margin-top: 1em;
-    padding: 0.5em;
+  height: 50%;
+  width: 50%;
+  background-color :#A9A9A9;
+  border-radius: 1em;
+  margin: auto;
+  margin-top: 1em;
+  padding: 0.5em;
 }
 
 #tiempoRever, #dimRecinto, #dimFuente, #dimMicro {
-    width: 90%;
-    margin: auto;
-    margin-top: 0.5em;
-    padding: 0.5em;
-    background-color: #DCDCDC;
-    border-radius: 0.5em;
+  width: 90%;
+  margin: auto;
+  margin-top: 0.5em;
+  padding: 0.5em;
+  background-color: #DCDCDC;
+  border-radius: 0.5em;
 }
 
 #tiempoRever {
-    height: 5%;;
+  height: 5%;;
 }
 
 #dimRecinto, #dimFuente, #dimMicro {
-    height: 20%;
+  height: 20%;
 }
 
 .distanceMsg {
