--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -4,28 +4,61 @@
 }
 
 body, html {
-  height: 100%;
+  height: 80%;
   font-family: Avenir;
   background-color: #F0F8FF;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
 }
 
-h4, p{
+h4 {
   padding: 6px;
   margin: auto;
   text-align: center;
 }
 
-h4 {
+h4, h3, input {
   text-align: center;
 }
 
 input {
-  width: auto;
-  height: 25px;
-  border-radius: 0.5em;
-  margin-left: 33%;
+  font: 15px/24px 'Muli', sans-serif;
+  color: inherit;
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  box-sizing: border-box;
+  letter-spacing: 1px;
+  margin-top: 10px;
+}
+
+.in-box{
+  width: 50%;
+  margin: auto;
+  position: relative;
+}
+
+:focus{outline: none;}
+
+.effect {
+  border: 0;
+  padding: 7px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.effect ~ .focus-border{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 2px;
+  background-color: #4caf50;
+  transition: 0.4s;
+}
+
+.effect:focus ~ .focus-border{
+  width: 100%;
+  transition: 0.4s;
 }
 
 /*
