--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -239,7 +239,7 @@ input {
   cursor: pointer;
 }
 
-.coef_absorcion {
+.options-menu {
   border: none;
   background: #404040;
   color: #ffffff !important;
@@ -250,9 +250,10 @@ input {
   border-radius: 6px;
   display: inline-block;
   transition: all 0.3s ease 0s;
+  cursor: pointer;
 }
 
-.coef_absorcion:hover {
+.options-menu:hover {
   color: #404040 !important;
   font-weight: 700 !important;
   letter-spacing: 3px;
@@ -260,6 +261,14 @@ input {
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
   transition: all 0.3s ease 0s;
+}
+
+.s1 {
+  width: 40%;
+}
+
+.s1 {
+  width: 30%;
 }
 
 .rever-container {
