--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -63,9 +63,8 @@ input {
 
 /* Style the tab */
 .tab {
-  width: 80%;
+  width: 100%;
   margin: auto;
-  overflow: hidden;
   border: 2px solid #ccc;
   background-color: #f1f1f1;
   border-radius: 6px;
@@ -77,13 +76,13 @@ input {
 .tab button {
   width: 33%;
   background-color: inherit;
-  float: left;
   border: none;
   outline: none;
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
   font-size: 17px;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 /* Change background color of buttons on hover */
@@ -97,7 +96,7 @@ input {
 }
 
 /* Style the tab content */
-.tabcontent {
+.tabcontent,  .tabcontent-2{
   display: none;
   padding: 6px 12px;
   border: 1px solid #ccc;
@@ -226,7 +225,7 @@ input {
 .calcButton {
   position: relative;
   width: 150px;
-  height: 25px;
+  height: auto;
   margin: auto;
   margin-top: 0.5em;
   border-radius: 8px;
@@ -264,14 +263,5 @@ input {
 }
 
 .s1 {
-  width: 40%;
-}
-
-.s1 {
-  width: 30%;
-}
-
-.rever-container {
-  color: red;
-  width: 60%;
+  margin-left: 20px;
 }
