Añadida tabla de coef abs paredes. Falta tabla de suelos.

--- a/modules/style/program.css
+++ b/modules/style/program.css
@@ -276,9 +276,9 @@ input {
 .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
 .tg .tg-wp8o{border-color:#000000;text-align:center;vertical-align:top}
-.tg .tg-lu7j{font-weight:bold;font-size:22px;background-color:#9aff99;border-color:inherit;text-align:center;vertical-align:top}
-.tg .tg-g8ho{font-weight:bold;background-color:#ffffc7;color:#000000;border-color:#000000;text-align:center;vertical-align:top}
-.tg .tg-luhm{font-weight:bold;background-color:#ecf4ff;border-color:#000000;text-align:left;vertical-align:top}
+.tg .tg-title{font-weight:bold;font-size:22px;background-color:#9aff99;border-color:inherit;text-align:center;vertical-align:top}
+.tg .tg-cabecera{font-weight:bold;background-color:#ffffc7;color:#000000;border-color:#000000;text-align:center;vertical-align:top}
+.tg .tg-typeMaterial{font-weight:bold;background-color:#ecf4ff;border-color:#000000;text-align:left;vertical-align:top}
 .tg .tg-73oq{border-color:#000000;text-align:left;vertical-align:top}
 .tg .tg-fgdu{font-weight:bold;background-color:#ecf4ff;border-color:inherit;text-align:left;vertical-align:top}
 .tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
