--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -6,7 +6,6 @@
 body, html {
   height: 80%;
   font-family: Avenir;
-  background-color: #F0F8FF;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
 }
@@ -30,6 +29,10 @@ input {
   box-sizing: border-box;
   letter-spacing: 1px;
   margin-top: 10px;
+}
+
+p {
+  margin-top: 7px;
 }
 
 .bg-image {
@@ -156,13 +159,13 @@ input {
 }
 
 .init-menu a{
-  width: 30%;
+  width: 20%;
   height: 85%;
   background-color: inherit;
   outline: 0;
   font-family: "Lato", sans-serif;
-  font-size: 25px;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 600;
   color: black;
   text-decoration: none;
   cursor: pointer;
@@ -172,6 +175,7 @@ input {
   display:inline-block;
   padding: 6px 12px;
   text-align: center;
+  vertical-align:middle
 }
 
 .init-menu a:hover {
@@ -193,13 +197,10 @@ input {
 }
 
 .contenedorPrincipal {
-  width:90%;
-  background-color: #ddd;
+  width:100%;
   position:relative;
   margin:auto;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+  padding:100px;
 }
 
 .canvasDisplay, .formDisplay, .reverDisplay {
@@ -240,6 +241,12 @@ input {
   width: 60%;
   height: 90%;
 }
+
+#minDistance {background-color: white;}
+
+#reverTime {background-color: black;}
+
+#materials {background-color: white;}
 
 #tiempoRever, #dimFuente, #dimMicro, #coefRecinto, #dimRecinto, #supRecinto {
   background-color: #DCDCDC;
