--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -5,9 +5,9 @@
 
 body, html {
   height: 80%;
-  font-family: Avenir;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
+  background-color:#f1f1f1;
 }
 
 h4 {
@@ -20,14 +20,16 @@ h4, h3, input {
   text-align: center;
 }
 
+
 input {
-  font: 15px/24px 'Muli', sans-serif;
+  font-family: "Lato"
   color: inherit;
   width: 100%;
   height: 30px;
-  border-radius: 5px;
   box-sizing: border-box;
-  letter-spacing: 1px;
+  border-color: inherit;
+  border-radius: 4px;
+  letter-spacing: 2px;
   margin-top: 10px;
 }
 
@@ -94,7 +96,6 @@ p {
 .effect {
   border: 0;
   padding: 7px 0;
-  border-bottom: 1px solid #ccc;
 }
 
 .effect ~ .focus-border{
@@ -103,13 +104,25 @@ p {
   left: 0;
   width: 0;
   height: 2px;
-  background-color: #4caf50;
+  border:none;
+  background-color: #2196F3;
   transition: 0.4s;
 }
+
 
 .effect:focus ~ .focus-border{
   width: 100%;
   transition: 0.4s;
+}
+
+.content-title {
+  font-family: "Lato";
+  font-size: 50px;
+  font-weight: 10;
+  letter-spacing: 4px;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+  border-bottom:1px solid #ccc;
+  margin-top: 100px;
 }
 
 /* Style the tab */
@@ -159,19 +172,19 @@ p {
 }
 
 .init-menu a{
-  width: 20%;
+  width: 250px;
   height: 85%;
   background-color: inherit;
   outline: 0;
-  font-family: "Lato", sans-serif;
+  font-family: "Lato";
   font-size: 20px;
-  font-weight: 600;
+  letter-spacing: 3px;
   color: black;
   text-decoration: none;
   cursor: pointer;
   transition: 0.3s;
   border-radius: 5px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   display:inline-block;
   padding: 6px 12px;
   text-align: center;
@@ -189,47 +202,44 @@ p {
 
 /* Style the tab content */
 .tabcontent, .tabcontent-2, .tabcontent-3 {
-/*  display: none;*/
   padding: 6px 12px;
-/*  border: 1px solid #ccc;*/
   border-top: none;
   margin: auto;
+  margin-top: 50px;
 }
 
 .contenedorPrincipal {
-  width:100%;
+  width:80%;
   position:relative;
   margin:auto;
-  padding:100px;
+  text-align: center;
+  margin-top: 20px;
+  background: white;
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
 }
 
 .canvasDisplay, .formDisplay, .reverDisplay {
-  background-color: #A9A9A9;
-  text-align: center;
   margin: auto;
   border-radius: 1em;
-  margin-top: 1em;
-  padding: 1em;
 }
 
 .canvasDisplay {
   width: 60%;
   height: 45%;
+  display:inline-block;
+  background-color: white;
 }
 
 .displayOne {
   position: relative;
   float: left;
-  margin: auto;
-  padding: 1em;
-  text-align: center;
+  margin: 50px;
 }
 
 .displayTwo {
   position: relative;
-  margin: auto;
-  padding: 1em;
-  text-align: center;
+  float: right;
+  margin: 50px;
 }
 
 .formDisplay {
@@ -242,11 +252,6 @@ p {
   height: 90%;
 }
 
-#minDistance {background-color: white;}
-
-#reverTime {background-color: black;}
-
-#materials {background-color: white;}
 
 #tiempoRever, #dimFuente, #dimMicro, #coefRecinto, #dimRecinto, #supRecinto {
   background-color: #DCDCDC;
@@ -281,7 +286,6 @@ p {
 }
 
 #eyring {display: none}
-
 #tabTecho {display: none}
 #tabSuelo {display: none}
 
@@ -327,7 +331,8 @@ p {
   width: 150px;
   height: auto;
   margin: auto;
-  margin-top: 0.5em;
+  margin-top: 25px;
+  margin-bottom: 25px;
   border-radius: 8px;
   background-color: #3CB371;
   border: 1px solid green;
@@ -368,7 +373,7 @@ p {
   color: #ffffff !important;
   font-weight: 100;
   padding: 20px;
-  margin-top: 0.5em;
+  margin-top: 50px;
   text-transform: uppercase;
   border-radius: 6px;
   display: inline-block;
