--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -7,7 +7,7 @@ body, html {
   height: 80%;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
-  background-color:#f1f1f1;
+  background-color:white;
 }
 
 h4 {
@@ -160,9 +160,9 @@ button:hover {
   font-size: 50px;
   font-weight: 10;
   letter-spacing: 4px;
-  text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.8);
   border-bottom:1px solid #ccc;
-  margin-top: 100px;
+  margin-top: 200px;
 }
 
 /* Style the tab */
@@ -171,9 +171,7 @@ button:hover {
   z-index: 1;
   width: 100%;
   height: 75px;
-  border: 2px solid #ccc;
-  background-color: white;
-/*  border-radius: 6px;*/
+  background-color: #404040;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
@@ -187,15 +185,30 @@ button:hover {
   border-radius: 5px;
 }
 
-.init-logo img {
-  height: 90%;
-  width: auto;
-  margin-top: 5px;
-  margin-left: 15px;
+.init-logo a {
+  margin-left: 30px;
+  background-color: inherit;
+  color: white;
+  font-family: "Lato";
+  font-size: 50px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-decoration: none;
+  outline: 0;
   cursor: pointer;
+  transition: 0.3s;
+  border-radius: 5px;
+  display:inline-block;
+  margin-top: 1px;
+  padding: 6px 12px;
+  text-align: center;
+  vertical-align:middle;
 }
 
-.init-logo img:hover {
+.init-logo a:hover {
+  font-weight: 900;
+  background-color: white;
+  color: black;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
@@ -219,12 +232,11 @@ button:hover {
   font-family: "Lato";
   font-size: 20px;
   letter-spacing: 3px;
-  color: black;
+  color: white;
   text-decoration: none;
   cursor: pointer;
   transition: 0.3s;
   border-radius: 5px;
-  /*text-transform: uppercase;*/
   display:inline-block;
   padding: 6px 12px;
   text-align: center;
@@ -232,12 +244,14 @@ button:hover {
 }
 
 .init-menu a:hover {
-  background-color: #ddd;
+  font-weight: 900;
+  background-color: white;
+  color: black;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 .init-menu a:active {
-  background-color: #ccc;
+  background-color: Black;
 }
 
 /* Style the tab content */
@@ -255,10 +269,11 @@ button:hover {
   text-align: center;
   margin-top: 20px;
   background: white;
-  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.6),0 4px 20px 0 rgba(0,0,0,0.6)
 }
 
 .canvasDisplay, .formDisplay, .reverDisplay {
+  letter-spacing: 2px;
   margin: auto;
   border-radius: 1em;
 }
@@ -294,11 +309,14 @@ button:hover {
 
 
 #tiempoRever, #dimFuente, #dimMicro, #coefRecinto, #dimRecinto, #supRecinto {
-  background-color: #DCDCDC;
+  color: white;
+  letter-spacing: 2px;
+  background-color: #404040;
   margin: auto;
   margin-top: 0.5em;
   padding: 0.5em;
   border-radius: 0.5em;
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
 }
 
 #tiempoRever, #dimFuente, #dimMicro, #dimRecinto {
@@ -384,9 +402,9 @@ button:hover {
 .tg{border-collapse:collapse;border-spacing:0;}
 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
-.tg-title{font-weight:bold;font-size:22px;background-color:#9aff99;border-color:#000000;text-align:center;vertical-align:top}
-.tg-cabecera{font-weight:bold;background-color:#ffffc7;color:#000000;border-color:#000000;text-align:center;vertical-align:top}
-.tg-typeMaterial{font-weight:bold;background-color:#ecf4ff;border-color:#000000;text-align:left;vertical-align:top}
+.tg-title{font-weight:bold;font-size:22px;color:white;background-color:SlateGray;border-color:#000000;text-align:center;vertical-align:top}
+.tg-cabecera{font-weight:bold;background-color:Silver;color:#000000;border-color:#000000;text-align:center;vertical-align:top}
+.tg-typeMaterial{font-weight:bold;background-color:MintCream;border-color:#000000;text-align:left;vertical-align:top}
 .tg-celda{border-color:inherit;vertical-align:top}
 .tx-center{text-align:center}
 .tx-left{text-align:left;}
