Añadida sombra a botones.

--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -48,6 +48,7 @@ button {
   display: inline-block;
   transition: all 0.3s ease 0s;
   cursor: pointer;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 button:hover {
