--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -20,7 +20,6 @@ h4, h3, input {
   text-align: center;
 }
 
-
 input {
   font-family: "Lato"
   color: inherit;
@@ -37,9 +36,59 @@ p {
   margin-top: 7px;
 }
 
+details {
+  float: right;
+  width: 20%;
+  height: auto;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+summary {
+  height: 20px;
+  width: 20px;
+  background-color: inherit;
+  color: #404040;
+  border-radius: 50%;
+  border: 3px solid #404040;
+  font-size: 17px;
+  font-weight: 700;
+  font-style: italic;
+  text-align: center;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+}
+
+summary::-webkit-details-marker {
+    display: none;
+}
+
+.info-area div{
+  font-family: "Lato";
+  border-radius:5px;
+  border: 2px solid #404040;
+}
+
+.info-area h2 {
+  color: white;
+  background-color:#404040;
+}
+
+.info-area p {
+  text-align: left;
+  margin: 5px;
+}
+
+.distance-image {
+  width: 50%;
+}
+
+.reverberation-image {
+  width: 90%;
+}
+
 button {
   border: none;
-  color: #ffffff !important;
+  color: #ffffff;
   font-weight: 100;
   padding: 20px;
   margin-top: 50px;
@@ -52,8 +101,8 @@ button {
 }
 
 button:hover {
-  color: #404040 !important;
-  font-weight: 700 !important;
+  color: #404040;
+  font-weight: 700;
   letter-spacing: 3px;
   background: none;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
@@ -85,7 +134,7 @@ button:hover {
   height: 40%;
   background-attachment: fixed;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   margin: auto;
 }
@@ -94,7 +143,6 @@ button:hover {
 .img2 { background-image: url("images/micro-completo.jpg"); }
 .img3 { background-image: url("images/altavoz-completo.jpg"); }
 .img4 { background-image: url("images/guitarra-completo.jpg"); }
-.img5 { background-image: url("images/micro1-completo.jpg"); }
 
 .bg-box {
   background-color: black;
@@ -271,9 +319,10 @@ button:hover {
   box-shadow:0 4px 10px 0 rgba(0,0,0,0.6),0 4px 20px 0 rgba(0,0,0,0.6)
 }
 
-.canvasDisplay, .formDisplay, .reverDisplay {
+.canvasDisplay, .distanceDisplay, .reverDisplay {
   letter-spacing: 2px;
   margin: auto;
+  margin-top: 25px;
   border-radius: 1em;
 }
 
@@ -296,16 +345,27 @@ button:hover {
   margin: 50px;
 }
 
-.formDisplay {
+.distanceDisplay {
   height: 50%;
-  width: 50%;
+  width: 90%;
 }
 
 .reverDisplay {
-  width: 60%;
   height: 90%;
+  width: 90%;
 }
 
+.reverberation-title {
+  width: 250px;
+  height: auto;
+  margin: auto;
+  color: #404040;
+  font-family: "Lato";
+  font-size: 35px;
+  font-weight: 700;
+  text-align: center;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.8);
+}
 
 #tiempoRever, #dimFuente, #dimMicro, #coefRecinto, #dimRecinto, #supRecinto {
   color: white;
@@ -319,11 +379,11 @@ button:hover {
 }
 
 #tiempoRever, #dimFuente, #dimMicro, #dimRecinto {
-  width: 90%;
+  width: 50%;
 }
 
 #tiempoRever {
-  height: 5%;;
+  height: 5%;
 }
 
 #dimFuente, #dimMicro, #dimRecinto {
@@ -331,7 +391,7 @@ button:hover {
 }
 
 #coefRecinto, #supRecinto {
-  width: 60%;
+  width: 50%;
   height: auto;
 }
 
@@ -370,12 +430,12 @@ button:hover {
 }
 
 .good {
-  background-color: limegreen;
+  background-color: MediumSpringGreen;
   border: darkgreen;
 }
 
 .error {
-  background-color: red;
+  background-color: Crimson;
   border: darkred;
 }
 
