--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -62,30 +62,6 @@ summary::-webkit-details-marker {
     display: none;
 }
 
-.info-area div{
-  font-family: "Lato";
-  border-radius:5px;
-  border: 2px solid #404040;
-}
-
-.info-area h2 {
-  color: white;
-  background-color:#404040;
-}
-
-.info-area p {
-  text-align: left;
-  margin: 5px;
-}
-
-.distance-image {
-  width: 50%;
-}
-
-.reverberation-image {
-  width: 90%;
-}
-
 button {
   border: none;
   color: #ffffff;
@@ -198,7 +174,6 @@ button:hover {
   transition: 0.4s;
 }
 
-
 .info-input:focus ~ .focus-border{
   width: 100%;
   transition: 0.4s;
@@ -223,7 +198,6 @@ button:hover {
   background-color: #404040;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
-
 
 .init-logo {
   z-index: 1;
@@ -266,32 +240,30 @@ button:hover {
   z-index: 1;
   width: 60%;
   height: 70px;
-  margin-top: 2px;
+  margin-top: 5px;
   background-color: inherit;
   display:inline-block;
 }
 
 .init-menu a{
-  width: 30%;
-  height: 85%;
+  width: auto;
+  height: 60px;
   background-color: inherit;
-  outline: 0;
-  font-family: "Lato";
-  font-size: 20px;
-  letter-spacing: 3px;
   color: white;
-  text-decoration: none;
   cursor: pointer;
+  text-decoration: none;
+  outline: 0;
   transition: 0.3s;
   border-radius: 5px;
   display:inline-block;
   padding: 3px 6px;
   text-align: center;
-  vertical-align:middle
+  vertical-align:middle;
+  float: right;
+  margin-right: 5px;
 }
 
 .init-menu a:hover {
-  font-weight: 900;
   background-color: white;
   color: black;
   box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
@@ -299,6 +271,40 @@ button:hover {
 
 .init-menu a:active {
   background-color: Black;
+}
+
+.letter-menu {
+  font-family: "Lato";
+  font-size: 15px;
+  font-weight: 900;
+  letter-spacing: 3px;
+  margin-top: 20px;
+  text-transform: uppercase;
+  padding: 3px 6px;
+}
+
+.info-area div{
+  font-family: "Lato";
+  border-radius:5px;
+  border: 2px solid #404040;
+}
+
+.info-area h2 {
+  color: white;
+  background-color:#404040;
+}
+
+.info-area p {
+  text-align: left;
+  margin: 5px;
+}
+
+.distance-image {
+  width: 50%;
+}
+
+.reverberation-image {
+  width: 90%;
 }
 
 /* Style the tab content */
@@ -309,9 +315,9 @@ button:hover {
   margin-top: 50px;
 }
 
-.contenedorPrincipal {
+.contenedor-principal {
   width:80%;
-  position:relative;
+  position: relative;
   margin:auto;
   text-align: center;
   margin-top: 20px;
@@ -319,38 +325,71 @@ button:hover {
   box-shadow:0 4px 10px 0 rgba(0,0,0,0.6),0 4px 20px 0 rgba(0,0,0,0.6)
 }
 
-.canvasDisplay, .distanceDisplay, .reverDisplay {
+.description {
+  font-family: "Lato";
+  font-size: 15px;
+  letter-spacing: 2px;
+  padding: 30px;
+  text-align: left;
+}
+
+.description ul,li{margin-left: 30px;}
+.description li {color:#404040;font-weight: 800;}
+.description-text {margin-left:90px;}
+.description-numeration {margin-left: 120px;}
+
+.image-container-desc {
+  width: 70%;
+  padding: 15px;
+  margin: auto;
+}
+
+.image-container-desc h2{
+  color: #404040;
+  font-family: "Lato";
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+.image-description {
+  margin-top: 20px;
+  width: 40%;
+}
+
+.canvas-display, .distance-display, .rever-display {
   letter-spacing: 2px;
   margin: auto;
   margin-top: 25px;
   border-radius: 1em;
 }
 
-.canvasDisplay {
+.canvas-display {
   width: 80%;
   height: 45%;
   display:inline-block;
   background-color: white;
 }
 
-.displayOne {
+.display-one {
   position: relative;
   float: left;
   margin: 50px;
 }
 
-.displayTwo {
+.display-two {
   position: relative;
   float: right;
   margin: 50px;
 }
 
-.distanceDisplay {
+.distance-display {
   height: 50%;
   width: 90%;
 }
 
-.reverDisplay {
+.rever-display {
   height: 90%;
   width: 90%;
 }
@@ -393,13 +432,6 @@ button:hover {
 #coefRecinto, #supRecinto {
   width: 50%;
   height: auto;
-}
-
-#grad1 {
-  margin-top:50px;
-  height: 250px;
-  width: 100%;
-  background-image: linear-gradient(to bottom right, Gray, DodgerBlue); /* Standard syntax (must be last) */
 }
 
 #eyring {display: none}
@@ -475,4 +507,77 @@ th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 
   font-style: italic;
   color: black;
   font-size: 20px;
+}
+
+#about {
+  width: 100%;
+  height: 200px;
+  margin-top:50px;
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.6),0 4px 20px 0 rgba(0,0,0,0.6);
+  background-image: linear-gradient(to bottom right, Gray, DodgerBlue);
+}
+
+.contact-area {
+  width: 49%;
+  height: 100%;
+  border-right: 1px solid #ccc;
+  display: inline-block;
+}
+
+.contact-github, .contact-gmail {
+  width: 100%;
+  height: auto;
+  margin-top: 30px;
+  float: left;
+}
+
+.contact-github img{
+  width: 30px;
+  height: 30px;
+  margin-left:70px;
+  text-align: center;
+}
+
+.contact-gmail img{
+  height: 30px;
+  margin-left:50px;
+  text-align: center;
+}
+
+.contact-github a, .contact-gmail a{
+  width: 250px;
+  font-family: "Lato";
+  font-size: 20px;
+  font-weight: 900;
+  letter-spacing: 3px;
+  text-decoration: none;
+  outline:0;
+  color:black;
+  margin-left: 15px;
+  text-align: center;
+}
+
+.about-area{
+  width: 50%;
+  float: right;
+}
+
+.about-area {
+  font-family: "Lato";
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+.about-area h2, {
+  font-size: 25px;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.about-area p{
+  font-size: 17px;
+  margin: 15px;
+  margin-top: 20px;
 }
