Eliminamos imágenes sobrantes.

--- a/resources/style/program.css
+++ b/resources/style/program.css
@@ -568,7 +568,7 @@ th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 
   text-align: center;
 }
 
-.about-area h2, {
+.about-area h2 {
   font-size: 25px;
   font-weight: 700;
   text-transform: uppercase;
