[~] Se añade búsqueda en toda la tabla

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -308,7 +308,7 @@ button:hover {
 }
 
 /* Style the tab content */
-.reverberation-time, #materialsTable {
+.reverberation-time {
   width: 100%;
   padding: 6px 12px;
   border-top: none;
@@ -320,8 +320,8 @@ button:hover {
   width:80%;
   position: relative;
   margin:auto;
-  text-align: center;
   margin-top: 20px;
+  text-align: center;
   background: white;
   box-shadow:0 4px 10px 0 rgba(0,0,0,0.6),0 4px 20px 0 rgba(0,0,0,0.6)
 }
@@ -439,6 +439,21 @@ button:hover {
 #tabTecho {display: none}
 #tabSuelo {display: none}
 
+#inputValue {
+  height: 40px;
+  margin-top: 50px;
+  border-width:medium;
+  border: 2px solid #404040;
+  font-weight: 700;
+  color: #404040;
+  letter-spacing: 2px;
+}
+
+#inputValue:focus {
+  background-color: #404040;
+  color: white;
+  transition: all 0.3s ease 0s;
+}
 
 .distanceMsg {
   width: 60%;
@@ -486,12 +501,11 @@ button:hover {
   border: darkgreen;
 }
 
-
 /* TABLES STYLE */
 
 /*  techos */
 
-.tg{border-collapse:collapse;border-spacing:0;}
+.tg{width:90%;margin:auto;margin-top:50px;margin-bottom:50px;border-collapse:collapse;border-spacing:0; }
 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg-title{font-weight:bold;font-size:22px;color:white;background-color:SlateGray;border-color:#000000;text-align:center;vertical-align:top}
