--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -455,6 +455,16 @@ button:hover {
   transition: all 0.3s ease 0s;
 }
 
+#suggested-list table{
+  position: relative;
+  border-collapse: collapse;
+  margin: auto;
+}
+
+#suggested-list th, td {
+  border: 1px solid black;
+}
+
 .distanceMsg {
   width: 60%;
   height: 7%;
@@ -505,7 +515,7 @@ button:hover {
 
 /*  techos */
 
-.tg{width:90%;margin:auto;margin-top:50px;margin-bottom:50px;border-collapse:collapse;border-spacing:0; }
+.tg{width:90%;margin:auto;margin-top:50px;margin-bottom:50px;border-collapse:collapse;border-spacing:0;}
 td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 .tg-title{font-weight:bold;font-size:22px;color:white;background-color:SlateGray;border-color:#000000;text-align:center;vertical-align:top}
