--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -67,7 +67,7 @@ button {
   color: #ffffff;
   font-weight: 100;
   padding: 20px;
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 25px;
   text-transform: uppercase;
   border-radius: 6px;
@@ -122,7 +122,6 @@ button:hover {
 
 .calculate-button {
   background: DodgerBlue;
-  margin-bottom: 20px;
 }
 
 .calculate-button a {
@@ -441,7 +440,7 @@ button:hover {
   margin-top: 0.5em;
   padding: 0.5em;
   border-radius: 0.5em;
-  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
 
 #tiempoRever, #dimFuente, #dimMicro, #dimRecinto {
@@ -493,36 +492,29 @@ button:hover {
   border: 1px solid black;
 }
 
-.distanceMsg {
-  width: 60%;
-  height: 7%;
-  border-radius: 0.5em;
-  margin: auto;
-  margin-top: 0.5em;
-  padding: 0.5em;
-  text-align: center;
-  font-size: 16px;
-  border: 2px solid;
-}
-
 .good, .error {
   width: 50%;
   height: auto;
+  margin: auto;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  padding: 0.5em;
   font-family: "Lato";
   font-size: 15px;
   font-weight: 700;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   text-align: center;
+  border-radius:  0.5em;
+  border-style: solid;
+  box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19);
 }
 
 .good {
-  background-color: MediumSpringGreen;
-  border: darkgreen;
+  border-color: MediumSpringGreen;
 }
 
 .error {
-  background-color: Crimson;
-  border: darkred;
+  border-color: Crimson;
 }
 
 .divReverTime {
