--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -48,14 +48,19 @@ p {
 }
 
 details {
+  position: absolute;
   float: right;
-  width: 20%;
+  width: 50px;
+  z-index: 1;
   height: auto;
+  margin-top: 25px;
+  margin-left:70%;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 }
 
 summary {
+  z-index: 1;
   height: 20px;
   width: 20px;text-decoration: none;
   background-color: inherit;
@@ -145,7 +150,7 @@ button:hover {
   text-align: left;
   color: white;
   text-decoration: none;
-  font-size:25px;
+  font-size:20px;
   font-weight:700;
   text-transform: uppercase;
 }
@@ -219,10 +224,12 @@ button:hover {
 }
 
 .calculate-button {
+  position: relative;
   background: DodgerBlue;
 }
 
 .calculate-button a {
+  position: relative;
   text-decoration: none;
   outline: 0;
   color: inherit;
@@ -384,6 +391,8 @@ button:hover {
 }
 
 .info-area div{
+  background-color: white;
+  width: 300px;
   font-family: "Lato";
   border-radius:5px;
   border: 2px solid #404040;
@@ -396,7 +405,8 @@ button:hover {
 
 .info-area p {
   text-align: left;
-  margin: 5px;
+  padding: 20px;
+  padding-top: 10px;
 }
 
 .distance-image {
@@ -430,7 +440,9 @@ button:hover {
   font-family: "Lato";
   font-size: 15px;
   letter-spacing: 2px;
-  padding: 30px;
+  padding: 100px;
+  padding-top: 75px;
+  padding-bottom: 50px;
   text-align: left;
 }
 
@@ -517,7 +529,6 @@ button:hover {
   letter-spacing: 2px;
   background-color: #404040;
   margin: auto;
-  margin-top: 100px;
   margin-top: 0.5em;
   padding: 0.5em;
   border-radius: 0.5em;
